<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="59dp"
    tools:layout_editor_absoluteY="-292dp">

    <TextView
        android:id="@+id/tv_access_fine_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/access_fine_location"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_answer_phone_calls"
        app:layout_constraintEnd_toStartOf="@id/tv_status_access_fine_location"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_status_access_fine_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_status_answer_phone_calls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_access_fine_location"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Not Granted"
        tools:textColor="@color/red" />

    <TextView
        android:id="@+id/tv_answer_phone_calls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/answer_phone_calls"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_camera_permission"
        app:layout_constraintEnd_toStartOf="@id/tv_status_answer_phone_calls"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_access_fine_location" />

    <TextView
        android:id="@+id/tv_status_answer_phone_calls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_status_camera_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_answer_phone_calls"
        app:layout_constraintTop_toBottomOf="@id/tv_status_access_fine_location"
        tools:text="Not Granted"
        tools:textColor="@color/red" />

    <TextView
        android:id="@+id/tv_camera_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="20dp"
        android:text="@string/camera_permission"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_read_sms"
        app:layout_constraintEnd_toStartOf="@id/tv_status_camera_permission"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_answer_phone_calls" />

    <TextView
        android:id="@+id/tv_status_camera_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_status_read_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_camera_permission"
        app:layout_constraintTop_toBottomOf="@id/tv_status_answer_phone_calls"
        tools:text="Not Granted"
        tools:textColor="@color/red" />

    <TextView
        android:id="@+id/tv_read_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:text="@string/read_sms_permission"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_grant_access_fine_location"
        app:layout_constraintEnd_toStartOf="@id/tv_status_read_sms"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_camera_permission" />

    <TextView
        android:id="@+id/tv_status_read_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_grant_answer_phone_calls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_read_sms"
        app:layout_constraintTop_toBottomOf="@id/tv_status_camera_permission"
        tools:text="Not Granted"
        tools:textColor="@color/red" />

    <Button
        android:id="@+id/btn_grant_access_fine_location"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/grant_access_fine_location"
        app:layout_constraintEnd_toStartOf="@id/btn_grant_answer_phone_calls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_read_sms"
        app:layout_constraintBottom_toTopOf="@id/btn_grant_camera"/>

    <Button
        android:id="@+id/btn_grant_answer_phone_calls"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/grant_answer_phone_calls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_grant_access_fine_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_read_sms"
        app:layout_constraintBottom_toTopOf="@id/btn_grant_read_sms"/>

    <Button
        android:id="@+id/btn_grant_camera"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/grant_camera_permission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_grant_access_fine_location"
        app:layout_constraintEnd_toStartOf="@id/btn_grant_read_sms"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_grant_read_sms"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/grant_read_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_grant_camera"
        app:layout_constraintTop_toBottomOf="@+id/btn_grant_answer_phone_calls"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_grant_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grant_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_grant_camera" />


</androidx.constraintlayout.widget.ConstraintLayout>